--- a/style.css
+++ b/style.css
@@ -4,73 +4,111 @@ body {
   padding: 0;
 }
 
-/* Sidebar Styles */
 .container {
-  display: flex;
   width: 100%;
-  height: 100vh;
+  margin-left: 0;
+  margin-right: 0;
+
 }
 
-.sidebar {
+/* Profile */
+.profile-container {
   display: flex;
   flex-direction: column;
-  text-wrap: wrap;
-  width: 25%;
-  background-color: #f0f0f0;
-  padding: 20px;
+  background-color: #eee;
+  padding: 1rem;
 }
 
-.sidebar-profile {
+.profile-header {
   display: flex;
-  margin-bottom: 20px;
-  gap: 20px;
-  justify-content: center;
   align-items: center;
+  gap: 1.5rem;
+  margin-bottom: 1rem;
 }
 
-.sidebar img {
+.profile-header img {
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 9rem;
+  height: 9rem;
 }
-.profile-info {
+
+.profile-header p {
+  font-size: 1.65rem;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.profile-bio {
+  font-size: 1.25rem;
+}
+
+.contact-me {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+/* Info */
+
+.info-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding: 1rem;
 }
 
-.profile-info h1 {
-  margin: 5px;
+.info-container h1 {
+  margin: 0.5rem;
+  font-size: 2rem;
 }
 
-.profile-info h2 {
-  margin: 5px;
-}
-
-.sidebar p {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.contact-info {
-  margin-top: 20px;
-}
-
-/* Main Styles */
-
-.main {
-  display: flex;
-  flex-direction: column;
-  width: 75%;
-  padding: 20px;
-}
-
-.main h1 {
-  margin-bottom: 10px;
-}
-
-
-.main a {
+.info-container a {
   text-decoration: none;
   color: #333;
+  font-size: 1.25rem;
+}
+
+/* Media Responsive */
+@media (min-width: 475px) {
+  .container {
+    max-width: 475px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+
+  .profile-container {
+    padding: 2rem;
+  }
+
+  .info-container {
+    padding: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+    display: flex;
+  }
+
+  .profile-container {
+    flex-direction: column;
+    gap: 2rem;
+    width: 27rem;
+    height: 100vh;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
 }
